training: Implemented new slideover overlays for developer & validator fundamentals (#740)
* Developer Fundamentals 1 - slideovers

* Fixed auto-collapse arrow directions

* Developer Fundamentals 2 - slideovers

* Developer Fundamentals 3 - slideovers

* Developer Fundamentals 4 - slideovers

* Developer Fundamentals slideovers - proofreading

* Setup for Validator Fundamentals slideovers

* Validation Fundamentals 1 - slideovers

* Custom slideover CSS

* Pulling in latest slideover css

* Validation Fundamentals - slideovers

* Proofreading + removing old validator fundamentals

* Proofreading pt2

* Proofreading pt3

* Final proofread

--- a/site/training/developer-fundamentals/finalizing-model-documentation.qmd
+++ b/site/training/developer-fundamentals/finalizing-model-documentation.qmd
@@ -16,6 +16,8 @@ format:
     view-distance: 2
     logo: /validmind.png
     footer: "{{< var validmind.training >}} | [Home {{< fa person-walking-dashed-line-arrow-right >}}](/training/training.qmd)"
+    revealjs-plugins:
+      - slideover
   html:
   # Change this to the file name prepended by a _ to get around the global HTML output settings required by _metadata.yml
     output-file: _finalizing-model-documentation.html
@@ -150,23 +152,22 @@ From the {{< var validmind.platform >}}:
 
 {{< include /guide/model-documentation/_view-test-result-metadata.qmd >}}
 
-
-
 :::
+
 ::::
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-:::: {.absolute bottom=0 left=50 right=50 .w-95 .f5 .tc .pl4 .overlay}
+:::: {.slideover--b .auto-collapse-10}
+::: {.tc}
 **Review model documentation**
-
-::: {.f6}
-1. From the **{{< fa cubes >}} Inventory**, select the name of your model you registered for this course to open up the model details page.
-2. On the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**.
-3. Click into any section of the documentation to review the test results logged via the {{< var validmind.developer >}}. <br>
-  For example: **2.3 Correlations and Interactions** / **3.2 Model Evaluation**
-
 :::
+
+1. Select the name of your model you registered for this course to open up the model details page.
+2. On the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**.
+3. Click into any section of the documentation to review the test results logged via the {{< var validmind.developer >}}. <br>For example:
+    - **2.3 Correlations and Interactions**
+    - **3.2 Model Evaluation**
 
 When you're done taking a look around, click [{{< fa chevron-right >}}]() to continue.
 
@@ -218,17 +219,19 @@ For example:
 :::
 
 :::
+
 ::::
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-:::: {.absolute bottom=0 left=50 right=50 .w-95 .f5 .tc .pl4 .overlay}
+:::: {.slideover--b .auto-collapse-10}
+::: {.tc}
 **Add & edit content blocks**
-
-::: {.f6}
-From your model's **{{< fa book-open >}} Documentation**, click into any section of the documentation to add and edit a content block.
-
 :::
+
+1. Select the name of your model you registered for this course to open up the model details page.
+2. On the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**.
+3. Click into any section of the documentation to add and edit a content block.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
@@ -278,15 +281,14 @@ To transition through the approval workflow, all required workflow steps must be
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-:::: {.absolute bottom=0 left=50 right=50 .w-95 .f5 .tc .pl4 .overlay}
+:::: {.slideover--b .auto-collapse-10}
+::: {.tc}
 **Submit for approval**
+:::
 
-::: {.f6}
-1. From the **{{< fa cubes >}} Inventory**, select the name of your model you registered for this course to open up the model details page.
+1. Select the name of your model you registered for this course to open up the model details page.
 2. Locate the **[model status]{.smallcaps}** section.
 3. Open up the status transition panel, enter your **[notes]{.smallcaps}** and any other additional inventory fields, then click **Submit**.
-
-:::
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
@@ -325,13 +327,14 @@ Comment threads
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-:::: {.absolute bottom=0 left=50 right=50 .w-95 .f5 .tc .pl4 .overlay}
+:::: {.slideover--b .auto-collapse-10}
+::: {.tc}
 **Comment on model documentation**
-
-::: {.f6}
-**In the content block you added earlier** within your model's **{{< fa book-open >}} Documentation**: Post a comment, reply to it, and then resolve the thread.
-
 :::
+
+1. Select the name of your model you registered for this course to open up the model details page.
+2. On the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**.
+3. **In the content block you added earlier**: Post a comment, reply to it, and then resolve the thread.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
@@ -366,15 +369,14 @@ Track changes & updates
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-:::: {.absolute bottom=0 left=50 right=50 .w-95 .f5 .tc .pl4 .overlay}
+:::: {.slideover--b .auto-collapse-10}
+::: {.tc}
 **Review model activity**
-
-::: {.f6}
-1. From the **{{< fa cubes >}} Inventory**, select the name of your model you registered for this course to open up the model details page.
-2. In the left sidebar that appears for your model, click **{{< fa wifi >}} Model Activity**.
-3. Filter the following activity: **Comments** | **Status Updates** | **Model Updates** | **Test Results**
-
 :::
+
+1. Select the name of your model you registered for this course to open up the model details page.
+2. In the left sidebar that appears for your model, click **{{< fa wifi >}} Model Activity**.
+3. Filter the following activity: <br>**Comments** | **Status Updates** | **Model Updates** | **Test Results**
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
@@ -384,20 +386,19 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ## {background-iframe="https://app.prod.validmind.ai/analytics" background-interactive="true" data-preload="yes"}
 
-:::: {.absolute bottom=0 left=50 right=50 .w-95 .f5 .tc .pl4 .overlay}
+:::: {.slideover--l .three-quarters .auto-collapse-10}
 **Welcome to {{< fa square-poll-vertical >}} Analytics**
 
-::: {.f6}
-Here, you can find executive summaries, track information on models, findings, and more. For example:
+Here, you can find executive summaries, track information on models, findings, and more.
+
+For example:
 
 1. Click **Models** to review reports on models.
 3. Click into any widget to review the models reported by that widget.
-:::
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
-
 
 # In summary {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
