--- a/site/training/developer-fundamentals/learning-to-run-tests.qmd
+++ b/site/training/developer-fundamentals/learning-to-run-tests.qmd
@@ -16,6 +16,8 @@ format:
     view-distance: 2
     logo: /validmind.png
     footer: "{{< var validmind.training >}} | [Home {{< fa person-walking-dashed-line-arrow-right >}}](/training/training.qmd)"
+    revealjs-plugins:
+      - slideover
   html:
   # Change this to the file name prepended by a _ to get around the global HTML output settings required by _metadata.yml
     output-file: _learning-to-run-tests.html
@@ -148,13 +150,10 @@ Let's continue our journey with **2 — Start the model development process** on
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html" background-interactive="yes" data-preload="yes"}
 
-:::: {.absolute bottom=15 left=0 right=50 .w-100 .f5 .tc .pl4 .pr4 .overlay}
+:::: {.slideover--r .three-quarters}
 **2 — Start the model development process**
 
-::: {.f6}
 During this course, we'll run through these notebooks together, and at the end of your learning journey you'll have a fully documented sample model ready for review.
-
-:::
 
 For now, **scroll through this notebook** to explore. When you are done, click [{{< fa chevron-right >}}]() to continue.
 
@@ -166,21 +165,16 @@ For now, **scroll through this notebook** to explore. When you are done, click [
 
 ## {background-iframe="/developer/model-testing/test-descriptions.html" background-interactive="true" data-preload="yes"}
 
-::: footer
-:::: {.absolute bottom=0 left=50 right=50 .w-95 .f4 .tc .pl4 .overlay}
+:::: {.slideover--l .three-quarters .auto-collapse-5}
 **{{< var vm.product >}} test repository**
 
-::: {.f5}
 {{< var vm.product >}} provides a wealth out-of-the-box of tests to help you ensure that your model is being built appropriately.
 
 In this module, you'll become familiar with the individual tests available in {{< var vm.product >}}, as well as how to run them and change parameters as necessary.
 
-:::
-
 For now, **scroll through these test descriptions** to explore. When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
-:::
 
 ## Get your code snippet
 
@@ -209,7 +203,7 @@ For now, **scroll through these test descriptions** to explore. When you're done
 ::: {.f5}
 {{< var vm.product >}} generates a unique *code snippet* for each registered model to connect with your developer environment:
 
-1. From the **{{< fa cubes >}} Inventory**, select the name of your model to open up the model details page.
+1. Select the name of your model you registered for this course to open up the model details page.
 2. On the left sidebar that appears for your model, click **Getting Started**.
 3. Locate the code snippet and click **Copy snippet to clipboard**.
 
@@ -230,16 +224,15 @@ Make sure you're logged in and have refreshed the page in a Chromium-based web b
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html#initialize-the-validmind-library" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--r .three-quarters}
 **Connect to your model**
 
-::: {.f6}
 With your code snippet copied to your clipboard:
 
 1. Open **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
-2. Run the following cells in the Setting up section: **Initialize the {{< var validmind.developer >}}** / **Import sample dataset**.
-
-:::
+2. Run the following cells in the Setting up section:
+    - **Initialize the {{< var validmind.developer >}}**
+    - **Import sample dataset**
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
@@ -247,32 +240,27 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html#identify-qualitative-tests" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--r .three-quarters}
 **Identify qualitative tests**
 
-::: {.f6}
 Next, we'll use the [`list_tests()` function](/notebooks/EXECUTED/model_development/1-set_up_validmind.ipynb#explore-available-tests){target="_blank"} to pinpoint tests we want to run:
 
 1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
 2. Run all the cells under the Setting up section: **Identify qualitative tests**
 
-:::
-
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
+
 ::::
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html#initialize-the-validmind-datasets" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--r .three-quarters}
 **Initialize {{< var vm.product >}} datasets**
 
-::: {.f6}
 Then, we'll use the [`init_dataset()` function](/validmind/validmind.qmd#init_dataset){target="_blank"} to connect the sample data with a {{< var vm.product >}} `Dataset` object in preparation for running tests:
 
 1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
 2. Run the following cell in the Setting up section: **Initialize the {{< var vm.product >}} datasets**
-
-:::
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
@@ -284,16 +272,13 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html#run-tabular-data-tests" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--r .three-quarters}
 **Run tabular data tests**
 
-::: {.f6}
 You run individual tests by calling the [`run_test()` function](/validmind/validmind/tests.qmd#run_test){target="_blank"} provided by the `validmind.tests` module:
 
 1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
-2. Run all the cells under the Running tests section: **Run tabular data tests**.
-
-:::
+2. Run all the cells under the Running tests section: **Run tabular data tests**
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
@@ -301,16 +286,13 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html#utilize-test-output" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--r .three-quarters}
 **Utilize test output**
 
-::: {.f6}
 You can utilize the output from a ValidMind test for further use, for example, if you want to remove highly correlated features:
 
 1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
-2. Run all the cells under the Running tests section: **Utilize test output**.
-
-:::
+2. Run all the cells under the Running tests section: **Utilize test output**
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
@@ -345,15 +327,13 @@ Every test result returned by the `run_test()` function has a `.log()` method th
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html#run-and-log-multiple-tests" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--r .three-quarters}
 **Run & log multiple tests**
 
-::: {.f6}
 The [`run_documentation_tests()` function](/validmind/validmind.qmd#run_documentation_tests){target="_blank"} allows you to run multiple tests at once and automatically log the results to your documentation:
 
 1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
-2. Run the following cell in the Documenting results section: **Run and log multiple tests**.
-:::
+2. Run the following cell in the Documenting results section: **Run and log multiple tests**
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
@@ -361,16 +341,13 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html#run-and-log-an-individual-test" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--r .three-quarters}
 **Run & log an individual test**
 
-::: {.f6}
 Next, we'll run an individual test and log the result to the {{< var validmind.platform >}}:
 
 1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
-2. Run the following cell in the Running tests section: **Run and log an individual test**.
-
-:::
+2. Run the following cell in the Running tests section: **Run and log an individual test**
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
@@ -416,21 +393,26 @@ With the test results logged, let's head to the model we connected to at the beg
 :::
 ::::
 
-
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory/" background-interactive="true" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--b .auto-collapse-10}
+::: {.tc}
 **Insert a test-driven block**
-
-::: {.f6}
-Within your model's **{{< fa book-open >}} Documentation**: 2.3 Correlations and Interactions — `HighPearsonCorrelation:balanced_raw_dataset`
-
 :::
+
+1. Select the name of your model you registered for this course to open up the model details page.
+2. In the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**.
+3. Locate the Data Preparation section and click on **2.3 Correlations and Interactions** to expand that section.
+4. Hover under the Pearson Correlation Matrix content block until a horizontal dashed line with a **{{< fa plus >}}** button appears, indicating that you can insert a new block.
+5. Click **{{< fa plus >}}** and then select **Test-Driven Block** under [from library]{.smallcaps}:
+    - Click on **VM Library** under [test-driven]{.smallcaps} in the left sidebar.
+    - In the search bar, type in `HighPearsonCorrelation`.
+    - Select `HighPearsonCorrelation:balanced_raw_dataset` as the test.
+5. Finally, click **Insert 1 Test Result to Document** to add the test result to the documentation.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
-
 
 # Test an existing model {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
@@ -475,15 +457,13 @@ In this next example, we’ll focus on running the tests within the Model Develo
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html#train-simple-logistic-regression-model" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--r .three-quarters}
 **Train your model**
 
-::: {.f6}
 Using {{< var vm.product >}} tests, we'll train a simple logistic regression model on our dataset and evaluate its performance:
 
 1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
-2. Run all the cells under the Model testing section: **Train simple logistic regression model**.
-:::
+2. Run all the cells under the Model testing section: **Train simple logistic regression model**
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
@@ -491,16 +471,13 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html#initialize-model-evaluation-objects" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--r .three-quarters}
 **Initialize a model object**
 
-::: {.f6}
 Use the `init_dataset()` and [`init_model()` functions](/validmind/validmind.qmd#init_model){target="_blank"} to initialize these objects:
 
 1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
-2. Run the cell under the following Model testing section: **Initialize model evaluation objects**.
-
-:::
+2. Run the cell under the following Model testing section: **Initialize model evaluation objects**
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
@@ -508,16 +485,13 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html#assign-predictions" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--r .three-quarters}
 **Assign predictions**
 
-::: {.f6}
 Use the [`assign_predictions()` method](/validmind/validmind/vm_models.qmd#assign_predictions){target="_blank"} from the `Dataset` object to link existing predictions to any number of models:
 
 1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
-2. Run the cell under the following Model testing section: **Assign predictions**.
-
-:::
+2. Run the cell under the following Model testing section: **Assign predictions**
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
@@ -525,22 +499,17 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html#run-the-model-evaluation-tests" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--r .three-quarters}
 **Run the model evaluation tests**
 
-::: {.f6}
 Finally, we'll run only the tests within the Model Development section of the model documentation:
 
 1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
-2. Run the cell under the following Model testing section: **Run the model evaluation tests**.
-
-:::
+2. Run the cell under the following Model testing section: **Run the model evaluation tests**
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
 ::::
-
-
 
 # In summary {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
