--- a/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
+++ b/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
@@ -16,6 +16,8 @@ format:
     view-distance: 2
     logo: /validmind.png
     footer: "{{< var validmind.training >}} | [Home {{< fa person-walking-dashed-line-arrow-right >}}](/training/training.qmd)"
+    revealjs-plugins:
+      - slideover
   html:
   # Change this to the file name prepended by a _ to get around the global HTML output settings required by _metadata.yml
     output-file: _using-validmind-for-model-development.html
@@ -140,92 +142,70 @@ In this first module, we'll run through **1 — Set up the {{< var validmind.dev
 
 Let's start our journey with **1 — Set up the {{< var validmind.developer >}}** on the next page. {{< fa hand-point-right >}}
 
-## {background-iframe="/notebooks/EXECUTED/model_development/1-set_up_validmind.html" background-interactive="yes" data-preload="yes"} 
+## {background-iframe="/notebooks/EXECUTED/model_development/1-set_up_validmind.html" background-interactive="yes" data-preload="yes"}
 
-:::: {.absolute bottom=15 left=0 right=50 .w-100 .f5 .tc .pl4 .pr4 .overlay}
+:::: {.slideover--r .three-quarters}
+
 **1 — Set up the {{< var validmind.developer >}}**
 
-::: {.f6}
 During this course, we'll run through these notebooks together, and at the end of your learning journey you'll have a fully documented sample model ready for review.
-:::
 
 For now, **scroll through this notebook** to explore. When you are done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
 
-<!-- USING THE VARIABLE IN THE HEADING MESSES UP THE PAGE ANCHOR -->
-
 # Register a model {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 ## {background-iframe="https://app.prod.validmind.ai" background-interactive="true" data-preload="yes"}
 
-::: {.fr .f5 .mv4 .nr5 .pa5 .overlay}
+:::: {.slideover--r}
 **Welcome to the {{< var validmind.platform >}}**
 
 From here, you can:
 
-- Keep track of your models in the <br>customizable inventory ...
-- Review and edit model documentation <br>generated via the {{< var validmind.developer >}} ...
-- Collaborate with model validators <br>to get your model approved ...
+- Keep track of your models in the customizable inventory ...
+- Review and edit model documentation generated via the {{< var validmind.developer >}} ...
+- Collaborate with model validators to get your model approved ...
 - ... and much more!
 
-::: {.f6 .pl3 .pr3 .embed}
+::: {.embed}
 **Can't load the {{< var validmind.platform >}}?**
 
-Make sure you're logged in and have <br>refreshed the page in a Chromium-based <br>web browser.
-:::
-
-When you're done navigating around, 
-<br>click [{{< fa chevron-right >}}]() to continue.
+Make sure you're logged in and have refreshed the page in a Chromium-based web browser.
 
 :::
 
+When you're done navigating around, click [{{< fa chevron-right >}}]() to continue.
+
+::::
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-:::: {.fr .f5 .mv6 .nr5 .pa4 .overlay}
+:::: {.slideover--r}
 **Welcome to the {{< fa cubes >}} Inventory**
 
-Use the model inventory to track <br>
-comprehensive details for all your <br>
-models throughout the model lifecycle.
-
-The model inventory is customizable <br>
-and extensible, with a layout that <br>
-can be configured to suit your needs.
+Use the model inventory to track comprehensive details for all your models throughout the model lifecycle. The model inventory is customizable and extensible, with a layout that can be configured to suit your needs.
 
 ::: {.f6 .pl3 .pr3 .embed}
-To start the documentation process, <br>
-a model must already be registered <br>
-in the model inventory via the <br>
-**{{< fa plus >}} Register Model** modal.
+To start the documentation process, a model must already be registered in the model inventory via the **{{< fa plus >}} Register Model** modal.
 :::
 
-**Let's register a model together** on <br>
-the next page. {{< fa hand-point-right >}}
+**Let's register a model together** on the next page. {{< fa hand-point-right >}}
 
 ::::
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory/?register=open" background-interactive="true" data-preload="yes"}
 
-:::: {.fr .f5 .mv5 .nr5 .pa4 .overlay}
-**Register a binary <br>classification model**
+:::: {.slideover--r .three-quarters .auto-collapse-10}
+**Register a binary classification model**
 
-1. Select the option <br>
-for a new model:
-
-::: {.f6 .nt2 .pl2}
+1. Select the option for a new model:
 - **Documentation template** — <br>`Binary classification`
-- **Use case** — <br>`Attrition/Churn Management`
+- **Use case** — <br>`Attrition/Churn Management`<br><br>
+  You can fill in other options according to your preference.
+2. Click **{{< fa plus >}} Register Model** to add the model to your inventory.
 
-  You can fill in other options<br> according to your preference.
-:::
-
-2. Click **{{< fa plus >}} Register Model** to <br>
-add the model to your <br>
-inventory.
-
-When you're done, <br>click [{{< fa chevron-right >}}]() to continue.
+When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
 
@@ -260,7 +240,7 @@ When you're done, <br>click [{{< fa chevron-right >}}]() to continue.
 ::: {.f5}
 {{< var vm.product >}} generates a unique *code snippet* for each registered model to connect with your developer environment:
 
-1. From the **{{< fa cubes >}} Inventory**, select the name of your model to open up the model details page.
+1. Select the name of your model you registered for this course to open up the model details page.
 2. On the left sidebar that appears for your model, click **Getting Started**.
 3. Locate the code snippet and click **Copy snippet to clipboard**.
 
@@ -281,16 +261,13 @@ Make sure you're logged in and have refreshed the page in a Chromium-based web b
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/1-set_up_validmind.html#install-the-validmind-library" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--r .three-quarters}
 **Install & initialize the {{< var validmind.developer >}}**
 
-::: {.f6}
 With your code snippet copied to your clipboard:
 
 1. Open **1 — Set up the {{< var validmind.developer >}}**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/1-set_up_validmind.ipynb){target="_blank"}
 2. Run all the cells in the sections under **Initializing the {{< var validmind.developer >}}**.
-
-:::
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
@@ -302,16 +279,13 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/1-set_up_validmind.html#preview-the-documentation-template" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--r .three-quarters}
 **Preview the documentation template**
 
-::: {.f6}
 You can preview your model's documentation template right from the {{< var validmind.developer >}}:
 
 1. Continue with **1 — Set up the {{< var validmind.developer >}}**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/1-set_up_validmind.ipynb){target="_blank"}
 2.  Run all the cells in the sections under **Getting to know ValidMind**.
-
-:::
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
@@ -338,23 +312,22 @@ Try it **live** on the next page. {{< fa hand-point-right >}}
 
 {{< include /guide/model-documentation/_review-model-documentation.qmd >}}
 
-
 :::
+
 ::::
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-:::: {.absolute bottom=0 left=50 right=50 .w-95 .f5 .tc .pl4 .overlay}
+:::: {.slideover--b .auto-collapse-10}
+::: {.tc}
 **Verify the documentation template**
+:::
 
-::: {.f6}
 Once you've called `preview_template()`:
 
-1. From the model inventory, select the name of your model to open up the model details page.
+1. Select the name of your model you registered for this course to open up the model details page.
 2. On the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**.
 3. Note how the structure of the Document Overview reflects the previewed template.
-
-:::
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
