--- a/site/training/training-templates/course-slides.qmd
+++ b/site/training/training-templates/course-slides.qmd
@@ -152,13 +152,13 @@ This is a collapsible right-aligned modal (`slideover--r`) on top of the live {{
 
 - This modal uses a version of the [`nrichers/slideover` extension](https://github.com/nrichers/slideover) ...
 - ... with the styling modified to mimic the style of the docs site callouts.
-- **Bold text shows up in a different colour.**
+- **Bold text shows up in a different colour.** So do *italics*.
 - You can use an additional callout style with this class: `.embed`
 
 ::: {.embed}
 This is the nested embed, that has its own styling. Think of it as a callout within the slideovers.
 
-Speaking of important information in callouts ... if you update the extension, **make sure to reapply our custom CSS changes under `slideover.css`!**
+Speaking of important information in callouts ... if you update the extension, **make sure to reapply our custom CSS template from `/training/assets/validmind-slideover.css` to the extensions `custom-slideover.css`!**
 
 :::
 
@@ -336,7 +336,7 @@ Try it **live** on the next page. {{< fa hand-point-right >}}
 ::: {.f5}
 {{< var vm.product >}} generates a unique *code snippet* for each registered model to connect with your developer environment:
 
-1. From the **{{< fa cubes >}} Inventory**, select the name of your model to open up the model details page.
+1. Select the name of your model you registered for this course to open up the model details page.
 2. On the left sidebar that appears for your model, click **Getting Started**.
 3. Locate the code snippet and click **Copy snippet to clipboard**.
 
