--- a/site/training/validator-fundamentals/developing-challenger-models.qmd
+++ b/site/training/validator-fundamentals/developing-challenger-models.qmd
@@ -16,6 +16,8 @@ format:
     view-distance: 2
     logo: /validmind.png
     footer: "{{< var validmind.training >}} | [Home {{< fa person-walking-dashed-line-arrow-right >}}](/training/training.qmd)"
+    revealjs-plugins:
+      - slideover
   html:
   # Change this to the file name prepended by a _ to get around the global HTML output settings required by _metadata.yml
     output-file: _developing-challenger-models.html
@@ -183,13 +185,10 @@ Let's continue our journey with **Section 1** on the next page. {{< fa hand-poin
 
 ## {background-iframe="/notebooks/EXECUTED/model_validation/3-developing_challenger_model.html" background-interactive="yes" data-preload="yes"}
 
-:::: {.absolute bottom=15 left=0 right=50 .w-100 .f5 .tc .pl4 .pr4 .overlay}
+:::: {.slideover--r .three-quarters}
 **3 — Developing a potential challenger model**
 
-::: {.f6}
 This is the third notebook in our introductory series, which will walk you through how to evaluate your champion model against a potential challenger with {{< var vm.product >}}.
-
-:::
 
 **Scroll through this notebook** to explore. When you are done, click [{{< fa chevron-right >}}]() to continue.
 
@@ -222,7 +221,7 @@ This is the third notebook in our introductory series, which will walk you throu
 ::: {.f5}
 {{< var vm.product >}} generates a unique *code snippet* for each registered model to connect with your validation environment:
 
-1. From the **{{< fa cubes >}} Inventory**, select the name of your model to open up the model details page.
+1. Select the name of your model you registered for this course to open up the model details page.
 2. On the left sidebar that appears for your model, click **Getting Started**.
 3. Locate the code snippet and click **Copy snippet to clipboard**.
 
@@ -243,16 +242,13 @@ Make sure you're logged in and have refreshed the page in a Chromium-based web b
 
 ## {background-iframe="/notebooks/EXECUTED/model_validation/3-developing_challenger_model.html#initialize-the-validmind-library" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--r .three-quarters}
 **Connect to your model**
 
-::: {.f6}
 With your code snippet copied to your clipboard:
 
 1. Open **3 — Developing a potential challenger model**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_validation/3-developing_challenger_model.ipynb){target="_blank"}
 2. Run all the cells under the **Setting up** section.
-
-:::
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
@@ -260,16 +256,13 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="/notebooks/EXECUTED/model_validation/3-developing_challenger_model.html#import-the-champion-model" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--r .three-quarters}
 **Import the champion model**
 
-::: {.f6}
 Next, let's import the champion model submitted by the model development team in the format of a `.pkl` file for evaluation:
 
 1. Continue with **3 — Developing a potential challenger model**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_validation/3-developing_challenger_model.ipynb){target="_blank"}
 2. Run the cell under the **Import the champion model** section.
-
-:::
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
@@ -315,16 +308,13 @@ We're curious how an alternate model compares to our champion model, so let's tr
 
 ## {background-iframe="/notebooks/EXECUTED/model_validation/3-developing_challenger_model.html#training-a-potential-challenger-model" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--r .three-quarters}
 **Random forest classification model**
 
-::: {.f6}
 Let's train our potential challenger model:
 
 1. Continue with **3 — Developing a potential challenger model**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_validation/3-developing_challenger_model.ipynb){target="_blank"}
 2. Run the cell under the following Training a potential challenger model section: **Random forest classification model**
-
-:::
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
@@ -332,16 +322,13 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="/notebooks/EXECUTED/model_validation/3-developing_challenger_model.html#initializing-the-model-objects" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--r .three-quarters}
 **Initialize the model objects**
 
-::: {.f6}
 In addition to the initialized datasets, you'll also need to initialize a ValidMind model object (`vm_model`) that can be passed to other functions for analysis and tests on the data for each of our two models using [the `vm.init_model()` method](/validmind/validmind.qmd#init_model){target="_blank"}:
 
 1. Continue with **3 — Developing a potential challenger model**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_validation/3-developing_challenger_model.ipynb){target="_blank"}
 2. Run all the cells under the section **Initializing the model objects**.
-
-:::
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
@@ -389,16 +376,13 @@ Finally, we want to verify the relative influence of different input features on
 
 ## {background-iframe="/notebooks/EXECUTED/model_validation/3-developing_challenger_model.html#run-model-performance-tests" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--r .three-quarters}
 **Run model performance tests**
 
-::: {.f6}
 Use the [`list_tests()` function](/validmind/validmind/tests.qmd#list_tests){target="_blank"} to identify all the model performance tests for classification:
 
 1. Continue with **3 — Developing a potential challenger model**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_validation/3-developing_challenger_model.ipynb){target="_blank"}
 2. Run all the cells under the Running model evaluation tests section: **Run model performance tests**
-
-:::
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
@@ -428,7 +412,7 @@ As we can observe from the output in our notebook, our champion model doesn't pa
 
 #### Create a finding via a validation report
 
-1. From the **Inventory** in the ValidMind Platform, go to the model you connected to earlier.
+1. From the **{{< fa cubes >}} Inventory** in the ValidMind Platform, go to the model you connected to earlier.
 
 2. In the left sidebar that appears for your model, click **{{< fa shield >}} Validation Report**.
 
@@ -464,13 +448,20 @@ As we can observe from the output in our notebook, our champion model doesn't pa
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory/" background-interactive="true" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--b .auto-collapse-10}
+::: {.tc}
 **Create a model finding**
 
-::: {.f6}
-Within your **{{< fa shield >}} Validation Report**: 2.2.2. Model Performance — **Link Finding to Report** {{< fa chevron-right >}} **{{< fa plus >}} Create New Finding** {{< fa chevron-right >}} **Update Linked Findings**
-
 :::
+
+1. Select the name of your model you registered for this course to open up the model details page.
+2. In the left sidebar that appears for your model, click **{{< fa shield >}} Validation Report**.
+3. Locate the Data Preparation section and click on **2.2.2. Model Performance** to expand that section.
+4. Under the Model Performance Metrics section, locate Findings then click **Link Finding to Report**.
+5. Click **{{< fa plus >}} Create New Finding** to add a finding.
+6. Enter in the details for your finding and click **Save**.
+7. Select the finding you just added to link to your validation report.
+8. Click **Update Linked Findings** to insert your finding.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
@@ -478,16 +469,13 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ## {background-iframe="/notebooks/EXECUTED/model_validation/3-developing_challenger_model.html#run-diagnostic-tests" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--r .three-quarters}
 **Run diagnostic tests**
 
-::: {.f6}
 This time, use `list_tests()` to identify all the model diagnosis tests for classification:
 
 1. Continue with **3 — Developing a potential challenger model**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_validation/3-developing_challenger_model.ipynb){target="_blank"}
 2. Run all the cells under the Running model evaluation tests section: **Run diagnostic tests**
-
-:::
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
@@ -495,16 +483,13 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="/notebooks/EXECUTED/model_validation/3-developing_challenger_model.html#run-feature-importance-tests" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--r .three-quarters}
 **Run feature importance tests**
 
-::: {.f6}
 Use `list_tests()` again to identify all the feature importance tests for classification:
 
 1. Continue with **3 — Developing a potential challenger model**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_validation/3-developing_challenger_model.ipynb){target="_blank"}
 2. Run all the cells under the Running model evaluation tests section: **Run feature importance tests**
-
-:::
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
@@ -514,12 +499,10 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="/notebooks/EXECUTED/model_validation/4-finalize_validation_reporting.html" background-interactive="yes" data-preload="yes"}
 
-:::: {.absolute bottom=15 left=0 right=50 .w-100 .f5 .tc .pl4 .pr4 .overlay}
+:::: {.slideover--r .three-quarters}
 **4 — Finalize testing and reporting**
 
-::: {.f6}
 This is the final notebook in our introductory series, which will walk you through how to supplement ValidMind tests with your own custom tests and include them as additional evidence in your validation report, and wrap up your validation testing.
-:::
 
 **Scroll through this notebook** to explore. When you are done, click [{{< fa chevron-right >}}]() to continue.
 
@@ -552,7 +535,7 @@ This is the final notebook in our introductory series, which will walk you throu
 ::: {.f4}
 As usual, let's connect back up to your model in the {{< var validmind.platform >}}:
 
-1. From the **{{< fa cubes >}} Inventory**, select the name of your model to open up the model details page.
+1. Select the name of your model you registered for this course to open up the model details page.
 2. On the left sidebar that appears for your model, click **Getting Started**.
 3. Locate the code snippet and click **Copy snippet to clipboard**.
 
@@ -566,16 +549,13 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ## {background-iframe="/notebooks/EXECUTED/model_validation/4-finalize_validation_reporting.html#initialize-the-validmind-library" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--r .three-quarters}
 **Connect to your model**
 
-::: {.f6}
 With your code snippet copied to your clipboard:
 
 1. Open **4 — Finalize testing and validation**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_validation/4-finalize_validation_reporting.ipynb){target="_blank"}
 2. Run all the cells under the **Setting up** section.
-
-:::
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
@@ -604,16 +584,13 @@ Let's implement a *custom test* that calculates a confusion matrix:
 
 ## {background-iframe="/notebooks/EXECUTED/model_validation/4-finalize_validation_reporting.html#implement-a-custom-inline-test" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--r .three-quarters}
 **Implement a custom inline test**
 
-::: {.f6}
-An *inline test* refers to a test written and executed within the same environment as the code being tested — <br>in the following example, right in our Jupyter Notebook —  without requiring a separate test file or framework:
+An *inline test* refers to a test written and executed within the same environment as the code being tested — in the following example, right in our Jupyter Notebook —  without requiring a separate test file or framework:
 
 1. Continue with **4 — Finalize testing and validation**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_validation/4-finalize_validation_reporting.ipynb){target="_blank"}
 2. Run all the cells in the following sections under Implementing custom tests: **Implement a custom inline test**
-
-:::
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
@@ -621,16 +598,13 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="/notebooks/EXECUTED/model_validation/4-finalize_validation_reporting.html#use-external-test-providers" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--r .three-quarters}
 **Use external test providers**
 
-::: {.f6}
-Sometimes you may want to reuse the same set of custom tests across multiple models and share them with others in your organization, <br>like the model development team would have done with you in this example workflow featured in this series of notebooks:
+Sometimes you may want to reuse the same set of custom tests across multiple models and share them with others in your organization, like the model development team would have done with you in this example workflow featured in this series of notebooks:
 
 1. Continue with **4 — Finalize testing and validation**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_validation/4-finalize_validation_reporting.ipynb){target="_blank"}
 2. Run all the cells in the following sections under Implementing custom tests: **Use external test providers**
-
-:::
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
@@ -640,16 +614,13 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="/notebooks/EXECUTED/model_validation/4-finalize_validation_reporting.html#verify-test-runs" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--r .three-quarters}
 **Verify model development testing**
 
-::: {.f6}
 Our final task is to verify that all the tests provided by the model development team were run and reported accurately:
 
 1. Continue with **4 — Finalize testing and validation**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_validation/4-finalize_validation_reporting.ipynb){target="_blank"}
 2. Run all the cells under the **Verify test runs** section.
-
-:::
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
