--- a/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
+++ b/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
@@ -16,6 +16,8 @@ format:
     view-distance: 2
     logo: /validmind.png
     footer: "{{< var validmind.training >}} | [Home {{< fa person-walking-dashed-line-arrow-right >}}](/training/training.qmd)"
+    revealjs-plugins:
+      - slideover
   html:
   # Change this to the file name prepended by a _ to get around the global HTML output settings required by _metadata.yml
     output-file: _using-validmind-for-model-validation.html
@@ -141,14 +143,12 @@ In this first module, we'll run through **1 — Set up the {{< var validmind.dev
 
 Let's start our journey with **1 — Set up the {{< var validmind.developer >}} for validation** on the next page. {{< fa hand-point-right >}}
 
-## {background-iframe="/notebooks/EXECUTED/model_validation/1-set_up_validmind_for_validation.html" background-interactive="yes" data-preload="yes"} 
+## {background-iframe="/notebooks/EXECUTED/model_validation/1-set_up_validmind_for_validation.html" background-interactive="yes" data-preload="yes"}
 
-:::: {.absolute bottom=15 left=0 right=50 .w-100 .f5 .tc .pl4 .pr4 .overlay}
+:::: {.slideover--r .three-quarters}
 **1 — Set up the {{< var validmind.developer >}} for validation**
 
-::: {.f6}
 During this course, we'll run through these notebooks together, and at the end of your learning journey you'll have a fully supported sample validation report ready for review.
-:::
 
 For now, **scroll through this notebook** to explore. When you are done, click [{{< fa chevron-right >}}]() to continue.
 
@@ -160,98 +160,73 @@ For now, **scroll through this notebook** to explore. When you are done, click [
 
 ## {background-iframe="https://app.prod.validmind.ai" background-interactive="true" data-preload="yes"}
 
-::: {.fr .f5 .nr5 .pa5 .overlay}
+:::: {.slideover--r}
 **Welcome to the {{< var validmind.platform >}}**
 
 From here, you can:
 
-- Keep track of your models in the <br>customizable inventory ...
-- Review model documentation <br> submitted by model developers ...
-- Assess the compliance of models by <br>logging findings and test results as <br>evidence on validation reports ...
-- View analytics on your models and findings, <br>and create custom reports ...
+- Keep track of your models in the customizable inventory ...
+- Review model documentation submitted by model developers ...
+- Assess the compliance of models by logging findings and test results as evidence on validation reports ...
+- View analytics on your models and findings, and create custom reports ...
 - ... and much more!
 
-::: {.f6 .pl3 .pr3 .embed}
+::: {.embed}
 **Can't load the {{< var validmind.platform >}}?**
 
-Make sure you're logged in and have refreshed<br> the page in a Chromium-based browser.
+Make sure you're logged in and have refreshed the page in a Chromium-based browser.
 :::
 
-When you're done navigating around,
-<br>click [{{< fa chevron-right >}}]() to continue.
+When you're done navigating around, click [{{< fa chevron-right >}}]() to continue.
 
-:::
+::::
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-:::: {.fr .f5 .mv5 .nr5 .pa4 .overlay}
+:::: {.slideover--r}
 **Welcome to the {{< fa cubes >}} Inventory**
 
-Use the model inventory to track <br>
-comprehensive details for all your <br>
-models throughout the model lifecycle.
+Use the model inventory to track comprehensive details for all your models throughout the model lifecycle. The model inventory is customizable and extensible, with a layout that can be configured to suit your needs.
 
-The model inventory is customizable <br>
-and extensible, with a layout that <br>
-can be configured to suit your needs.
+::: {.embed}
+In a usual model lifecycle, a champion model will have been independently registered in your model inventory and submitted to you for validation.
 
-::: {.f6 .pl3 .pr3 .embed}
-In a usual model lifecycle, <br>
-a champion model will have been <br>
-independently registered in your <br>
-model inventory and submitted to <br>
-you for validation.
-
-For this training course, <br>
-we'll have you register a dummy model <br>
-via the **{{< fa plus >}} Register Model** modal <br>
-and assign yourself as the validator <br>
-to familiarize you with the <br>
-{{< var validmind.platform >}} interface.
+For this training course, we'll have you register a dummy model via the **{{< fa plus >}} Register Model** modal and assign yourself as the validator to familiarize you with the {{< var validmind.platform >}} interface.
 :::
 
-**Let's register a model together** for use <br>
-with validation on the next page. {{< fa hand-point-right >}}
+**Let's register a model together** for use with validation on the next page. {{< fa hand-point-right >}}
 
 ::::
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory/?register=open" background-interactive="true" data-preload="yes"}
 
-:::: {.fr .f5 .mv5 .nr5 .pa4 .overlay}
-**Register a binary <br>classification model**
+:::: {.slideover--r .three-quarters .auto-collapse-10}
+**Register a binary classification model**
 
-1. Select the option <br>
-for a new model:
-
-::: {.f6 .nt2 .pl2}
+1. Select the option for a new model:
 - **Documentation template** — <br>`Binary classification`
-- **Use case** — <br>`Attrition/Churn Management`
+- **Use case** — <br>`Attrition/Churn Management`<br><br>
+  You can fill in other options according to your preference.
+2. Click **{{< fa plus >}} Register Model** to add the model to your inventory.
 
-  You can fill in other options<br> according to your preference.
-:::
-
-2. Click **{{< fa plus >}} Register Model** to <br>
-add the model to your <br>
-inventory.
-
-When you're done, <br>click [{{< fa chevron-right >}}]() to continue.
+When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-:::: {.absolute bottom=15 left=0 right=50 .w-100 .f5 .tc .pl4 .pr4 .overlay}
+:::: {.slideover--b .auto-collapse-10}
+::: {.tc}
 **Assign validator credentials**
 
-::: {.f6}
+:::
+
 In order to log tests as a validator instead of as a developer, we'll need to adjust your **model stakeholder** permissions:
 
-1. From the **{{< fa cubes >}} Inventory**, select the name the model you registered to open up the model details page.
+1. Select the name of your model you registered for this course to open up the model details page.
 2. Remove yourself as a model owner by clicking on the **[owners]{.smallcaps}** tile, then clicking on the **x** next to your name. Click **Save** to apply your changes to that role.
 3. Remove yourself as a developer by clicking on the **[developers]{.smallcaps}** tile, then clicking on the **x** next to your name. Click **Save** to apply your changes to that role.
 4. Add yourself as a validator by clicking on the **[validators]{.smallcaps}** tile, and selecting your name from the drop-down menu. Click **Save** to apply your changes to that role.
-
-:::
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
@@ -286,7 +261,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 ::: {.f5}
 {{< var vm.product >}} generates a unique *code snippet* for each registered model to connect with your validation environment:
 
-1. From the **{{< fa cubes >}} Inventory**, select the name of your model to open up the model details page.
+1. Select the name of your model you registered for this course to open up the model details page.
 2. On the left sidebar that appears for your model, click **Getting Started**.
 3. Locate the code snippet and click **Copy snippet to clipboard**.
 
@@ -307,16 +282,15 @@ Make sure you're logged in and have refreshed the page in a Chromium-based web b
 
 ## {background-iframe="/notebooks/EXECUTED/model_validation/1-set_up_validmind_for_validation.html#install-the-validmind-library" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--r .three-quarters}
 **Install & initialize the {{< var validmind.developer >}}**
 
-::: {.f6}
 With your code snippet copied to your clipboard:
 
 1. Open **1 — Set up the {{< var validmind.developer >}} for validation**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_validation/1-set_up_validmind_for_validation.ipynb){target="_blank"}
-2. Run all the cells under the Setting up sections: **Install the {{< var validmind.developer >}}** / **Initialize the {{< var validmind.developer >}}**
-
-:::
+2. Run all the cells under the Setting up sections:
+    - **Install the {{< var validmind.developer >}}**
+    - **Initialize the {{< var validmind.developer >}}**
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
@@ -326,16 +300,13 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="/notebooks/EXECUTED/model_validation/1-set_up_validmind_for_validation.html#preview-the-validation-report-template" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--r .three-quarters}
 **Preview the validation report template**
 
-::: {.f6}
 You can preview your model's validation report template right from the {{< var validmind.developer >}}:
 
 1. Continue with **1 — Set up the {{< var validmind.developer >}} for validation**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_validation/1-set_up_validmind_for_validation.ipynb){target="_blank"}
 2.  Run all the cells in the sections under **Getting to know ValidMind**.
-
-:::
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
@@ -343,17 +314,16 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-:::: {.absolute bottom=0 left=50 right=50 .w-95 .f5 .tc .pl4 .overlay}
+:::: {.slideover--b .auto-collapse-10}
+::: {.tc}
 **Verify the report template**
+:::
 
-::: {.f6}
 Once you've called `preview_template()`:
 
-1. From the model inventory, select the name of your model to open up the model details page.
+1. Select the name of your model you registered for this course to open up the model details page.
 2. On the left sidebar that appears for your model, click **{{< fa shield >}} Validation Report**.
 3. Note how the structure of the validation report reflects the previewed template.
-
-:::
 
 When you're done taking a look around, click [{{< fa chevron-right >}}]() to continue.
 
@@ -382,40 +352,29 @@ Try it **live** on the next page. {{< fa hand-point-right >}}
 
 {{< include /guide/model-documentation/_review-model-documentation.qmd >}}
 
-
 :::
 ::::
-
-
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-:::: {.fr .f5 .mv6 .nr5 .pa4 .overlay}
+:::: {.slideover--r .auto-collapse-10}
 **Explore sample model documentation**
 
-In a usual model lifecycle, a champion model <br>
-will have been submitted to you for validation <br>
-with completed model documentation.
+In a usual model lifecycle, a champion model will have been submitted to you for validation with completed model documentation.
 
-Here, review the empty sample model <br>
-documentation for the model you registered <br>
-earlier to familiarize you with what the structure <br>
-of documentation could look like when <br>
-presented to you for review.
+Here, review the empty sample model documentation for the model you registered earlier to familiarize you with what the structure of documentation could look like when presented to you for review:
 
-::: {.f6 .pl3 .pr3 .embed}
-The structure of the model documentation reflects <br>
-the documentation template applied to the model, <br>
-just like the validation report template.
+1. Select the name of your model you registered for this course to open up the model details page.
+2. In the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**.
+
+::: {.embed}
+The structure of the model documentation reflects the documentation template applied to the model, just like the validation report template.
 
 :::
 
-When you're done taking a look <br>
-around the model documentation, <br>
-click [{{< fa chevron-right >}}]() to continue.
+When you're done taking a look around the model documentation, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
-
 
 # In summary {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
