--- a/site/index.qmd
+++ b/site/index.qmd
@@ -181,8 +181,6 @@ a:hover {
 
 ::::
 
-:::
-
 <!-- PAGE-WRAPPING CONTAINER -->
 ::: {.column-screen}
 
@@ -233,7 +231,7 @@ ValidMind is a toolkit that helps identify AI and LLM risks while generating reg
 ::: {.w-50-ns .pr4}
 ### ValidMind Academy  
 Gain hands-on experience and explore what ValidMind has to offer with our interactive training environment.  
-[Learn through doing](/training/academy.qmd){.button-green .cta .mt3}
+[Learn through doing](/training/training.qmd){.button-green .cta .mt3}
 :::
 
 ::: {.w-50-ns .pl4}
@@ -245,3 +243,72 @@ We’ve introduced two new quickstart Jupyter Notebooks dealing with option pric
 
 :::: 
 
+<!--END of white card -->
+:::
+
+<!-- OUTSIDE OF THE WHITE CARD -->
+::: {.footer-container}
+
+::: {.footer-content}
+
+<!-- LEFT SIDE: Logo and copyright -->
+::: {.footer-left}
+![](/homepage_docsite/ValidMind MASTER Brand Assets_Logo-White R 2.svg){width="140"}
+
+![](/homepage_docsite/Ellipse 1.svg){width="40"}
+![](/homepage_docsite/Ellipse 1.svg){width="40"}
+![](/homepage_docsite/Ellipse 1.svg){width="40"}
+
+© Copyright 2025 ValidMind Inc.  
+All Rights Reserved.  
+[Privacy Policy](/privacy)   [Terms of Service](/terms)
+:::
+
+<!-- FOOTER COLUMNS -->
+::: {.footer-columns}
+
+::: {.footer-column}
+**Platform**  
+[Platform Overview](/platform/overview)  
+[Request a Demo](/platform/demo)
+:::
+
+::: {.footer-column}
+**Solutions**  
+[Solutions Overview](/solutions/overview)  
+[AI Models](/solutions/ai)  
+[Statistical & Traditional Models](/solutions/statistical)  
+[Generative AI Models](/solutions/generative)  
+[Advantage Partner Ecosystem](/solutions/partners)
+:::
+
+::: {.footer-column}
+**Community**  
+[Solutions Overview](/community/overview)  
+[AI Models](/community/ai)  
+[Statistical & Traditional Models](/community/statistical)  
+[Generative AI Models](/community/generative)  
+[Advantage Partner Ecosystem](/community/partners)
+:::
+
+::: {.footer-column}
+**Resources**  
+[Blog](/blog)  
+[Events](/events)  
+[Technical Briefs](/briefs)  
+[Webinars](/webinars)  
+[Legal](/legal)
+:::
+
+::: {.footer-column}
+**Company**  
+[About Us](/about)  
+[News](/news)  
+[Careers](/careers)  
+[Contact](/contact)
+:::
+
+:::
+:::
+:::
+::: 
