modified index.qmd and style.css

--- a/site/index.qmd
+++ b/site/index.qmd
@@ -235,9 +235,12 @@ Gain hands-on experience and explore what ValidMind has to offer with our intera
 :::
 
 ::: {.w-50-ns .pl4}
+
 ### Latest Release  
-#### v1.26.09 / January 24, 2025  
+![](/homepage_docsite/release_icon.svg){.mb3 width="30"} v1.26.09 / January 24, 2025  
+
 We’ve introduced two new quickstart Jupyter Notebooks dealing with option pricing in the Capital Markets section of our code samples.  
+
 [View all releases](/releases/all-releases.qmd){.button-green .cta .mt3}
 :::
 
