Updating admin learning paths

--- a/site/training/program/learning-paths.qmd
+++ b/site/training/program/learning-paths.qmd
@@ -143,7 +143,7 @@ Learn how to use {{< var vm.product >}} as a **validator** to generate validatio
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-80-ns}
-Learn how to use {{< var vm.product >}} as an **administrator** to onboard your organization, manage users, roles, and permissions, and customize the {{< var vm.platform >}} for your institution's requirements.
+Learn how to use {{< var vm.product >}} as an **administrator** to onboard your organization, customize the {{< var validmind.platform >}} for your institution's requirements, and use the {{< var vm.platform >}} as your centralized hub for risk management oversight.
 
 :::
 
@@ -189,17 +189,22 @@ Learn how to use {{< var vm.product >}} as an **administrator** to onboard your 
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-50-ns}
-#### <sup>Module 1</sup><br> {{< var validmind.platform >}} Onboarding
+#### <sup>Module 1</sup><br> Onboarding Your Organization
 
-- Setting up an organization <!-- {{< fa check >}} -->
-- Inviting users via email <!-- {{< fa check >}} -->
+- Set up the basics of your organization
+- Set up groups, roles, & permissions
+- Invite users to your organization
+- Assign users to groups, roles, & permissions
 :::
 
 ::: {.w-50-ns}
-#### <sup>Module 2</sup><br> User Management
+#### <sup>Module 2</sup><br> Customizing Your Model Inventory
 
-- Managing roles, permissions, and groups <!-- {{< fa check >}} -->
-- Mapping users to groups and roles <!-- {{< fa minus >}} -->
+- Configure model inventory fields
+- Customize document types
+- Customize documentation templates
+- Configure reusable blocks
+
 :::
 
 ::::
@@ -207,17 +212,20 @@ Learn how to use {{< var vm.product >}} as an **administrator** to onboard your 
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-50-ns}
-#### <sup>Module 3</sup><br> Lifecycle Statuses & Workflows
+#### <sup>Module 3</sup><br> Using {{< var vm.product >}} for Model Risk Management
+- Configure model stages
+- Set up custom workflows
+- Set up attestations
 
-- Configuring statuses & workflows <!-- {{< fa minus >}} -->
-- Assigning users to workflows <!-- {{< fa minus >}} -->
 :::
 
 ::: {.w-50-ns}
-#### <sup>Module 4</sup><br> Templates & Inventory Fields
+#### <sup>Module 4</sup><br> Organizational Oversight & Reporting
 
-- Customize templates <!-- {{< fa check >}} -->
-- Configure model inventory fields <!-- {{< fa x >}} -->
+- Audit model activity
+- View analytics
+- Set up custom reports
+
 :::
 
 ::::
